@@ -1,3 +1,11 @@
+2008-04-04  Richard B. Kreckel  <kreckel@ginac.de>
+
+	Re-establish ABI, broken 2008-01-20:
+	* src/float/ffloat/conv/cl_FF_from_float.cc: Add obsolete signature of
+	cl_float_to_FF_pointer.
+	* src/float/dfloat/conv/cl_DF_from_double.cc: Add obsolete signature of
+	cl_double_to_DF_pointer.
+
 2008-03-31  Bruno Haible  <bruno@clisp.org>
 
 	Fix hack from 2008-01-20 that broke on ARM.
